Adding initial version of argdefgen lexer/parser

--- a/odb-cli/CMakeLists.txt
+++ b/odb-cli/CMakeLists.txt
@@ -1,15 +1,31 @@
+include (GNUInstallDirs)
+add_subdirectory ("argdefgen")
+
 project ("odbc"
     LANGUAGES CXX
     VERSION 0.0.1)
 
-include (GNUInstallDirs)
+# These may not exist
+file (MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/src")
+file (MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/include/odb-cli")
+
+add_custom_command (
+    OUTPUT "${PROJECT_BINARY_DIR}/src/Actions.argdef.cpp"
+           "${PROJECT_BINARY_DIR}/include/odb-cli/Actions.argdef.hpp"
+    COMMAND argdefgen
+    ARGS --argdef "src/Actions.argdef" --source "${PROJECT_BINARY_DIR}/src/Actions.argdef.cpp" --header "${PROJECT_BINARY_DIR}/include/odb-cli/Actions.argdef.hpp"
+    WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+    MAIN_DEPENDENCY "src/Actions.argdef"
+    DEPENDS argdefgen
+    COMMENT "Generating argument table from argdef"
+    VERBATIM)
 
 ###############################################################################
 # Executable
 ###############################################################################
 
 add_executable (odbc
-    "src/Actions.cpp"
+    "${PROJECT_BINARY_DIR}/src/Actions.argdef.cpp"
     "src/AST.cpp"
     "src/Banner.cpp"
     "src/BuildInfo.cpp"
