--- a/odb-cli/argdefgen/CMakeLists.txt
+++ b/odb-cli/argdefgen/CMakeLists.txt
@@ -21,8 +21,9 @@ flex_target (adg_scanner
 add_flex_bison_dependency (adg_scanner adg_parser)
 
 add_executable (argdefgen
-    "src/main.c"
+    "src/action.c"
     "src/driver.c"
+    "src/main.c"
     "src/node.c"
     "src/str.c"
     ${BISON_adg_parser_OUTPUTS}
