Init dependencies in action table. Basic codegen for c++

--- a/odb-cli/argdefgen/CMakeLists.txt
+++ b/odb-cli/argdefgen/CMakeLists.txt
@@ -23,6 +23,7 @@ add_flex_bison_dependency (adg_scanner adg_parser)
 add_executable (argdefgen
     "src/action.c"
     "src/driver.c"
+    "src/gen_cpp.c"
     "src/main.c"
     "src/node.c"
     "src/str.c"
