Fixing meta action bugs

--- a/odb-cli/CMakeLists.txt
+++ b/odb-cli/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable (odbc
     "src/Commands.cpp"
     "src/Log.cpp"
     "src/SDK.cpp"
+    "src/Warnings.cpp"
     "src/main.cpp")
 target_include_directories (odbc
     PUBLIC
