--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -219,7 +219,7 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ir/Node.cpp"
     "src/ir/SemanticChecker.cpp"
     "src/parsers/db/Driver.cpp"
-    "src/parsers/DynamicLibData.cpp")
+    "src/parsers/PluginInfo.cpp")
 target_include_directories (odb-compiler
     PUBLIC
         $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
