--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -22,16 +22,16 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Build bison
-      run: wget http://ftp.gnu.org/gnu/bison/bison-3.7.tar.gz && tar -zxvf bison-3.7.tar.gz && pushd bison-3.7/ && ./configure && sudo make install && popd
+      run: wget http://ftp.gnu.org/gnu/bison/bison-3.7.tar.gz && tar -zxvf bison-3.7.tar.gz && pushd bison-3.7/ && ./configure && make -j$(nproc) && sudo make install && popd
 
     - name: Install packages
-      run: sudo apt update && sudo apt install gperf valgrind llvm-dev
+      run: sudo apt update && sudo apt install valgrind flex
 
-    - name: Update packages
-      run: sudo apt update && sudo apt --only-upgrade install flex
+    - name: Install LLVM
+      run: wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo ./llvm.sh 12
 
     - name: Versions
-      run: bison --version; flex --version; gperf --version
+      run: bison --version; flex --version
 
     # - name: Debugging with tmate
     #   # You may pin to the exact commit or the version.
@@ -60,7 +60,7 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config $BUILD_TYPE
+      run: cmake --build . --config $BUILD_TYPE --parallel $(nproc)
 
     - name: Test
       working-directory: ${{runner.workspace}}/build
