--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install packages
-      run: brew update && brew install bison flex gperf
+      run: brew update && brew install bison flex
 
     - name: Modify path
       run: |
@@ -66,7 +66,7 @@ jobs:
       working-directory: ${{runner.workspace}}/build
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config $BUILD_TYPE
+      run: cmake --build . --config $BUILD_TYPE --parallel $(sysctl -n hw.ncpu)
 
     - name: Test
       working-directory: ${{runner.workspace}}/build
