--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,10 +25,10 @@ jobs:
       run: wget http://ftp.gnu.org/gnu/bison/bison-3.7.tar.gz && tar -zxvf bison-3.7.tar.gz && pushd bison-3.7/ && ./configure && make -j$(nproc) && sudo make install && popd
 
     - name: Install packages
-      run: sudo apt update && sudo apt install valgrind flex
+      run: sudo apt update && sudo apt install valgrind flex llvm-11 liblld-11-dev
 
-    - name: Install LLVM
-      run: wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo ./llvm.sh 12
+#    - name: Install LLVM
+#      run: wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo ./llvm.sh 12
 
     - name: Versions
       run: bison --version; flex --version
