Use external lld executable.

--- a/odb-cli/CMakeLists.txt
+++ b/odb-cli/CMakeLists.txt
@@ -41,6 +41,33 @@ set_target_properties (odbc
         RUNTIME_OUTPUT_DIRECTORY ${ODB_RUNTIME_DIR}
         INSTALL_RPATH ${CMAKE_INSTALL_LIBDIR})
 
+# Set up a job to copy LLD binaries into odbc's bin folder.
+add_custom_command (TARGET odbc
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${ODB_RUNTIME_DIR}/lld/bin
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${ODB_RUNTIME_DIR}/lld/lib
+    COMMAND ${CMAKE_COMMAND} -E copy
+        ${LLVM_BINARY_DIR}/bin/lld
+        ${ODB_RUNTIME_DIR}/lld/bin
+    COMMAND ${CMAKE_COMMAND} -E copy
+        ${LLVM_BINARY_DIR}/bin/lld-link
+        ${ODB_RUNTIME_DIR}/lld/bin
+    COMMAND ${CMAKE_COMMAND} -E copy
+        ${LLVM_BINARY_DIR}/bin/ld.lld
+        ${ODB_RUNTIME_DIR}/lld/bin
+    COMMAND ${CMAKE_COMMAND} -E copy
+        ${LLVM_BINARY_DIR}/bin/ld64.lld
+        ${ODB_RUNTIME_DIR}/lld/bin
+    COMMAND ${CMAKE_COMMAND} -E copy
+        ${LLVM_BINARY_DIR}/lib/${CMAKE_SHARED_LIBRARY_PREFIX}LLVM${CMAKE_SHARED_LIBRARY_SUFFIX}
+        ${ODB_RUNTIME_DIR}/lld/lib
+    BYPRODUCTS
+        ${ODB_RUNTIME_DIR}/lld/bin/lld
+        ${ODB_RUNTIME_DIR}/lld/bin/lld-link
+        ${ODB_RUNTIME_DIR}/lld/bin/ld.lld
+        ${ODB_RUNTIME_DIR}/lld/bin/ld64.lld
+        ${ODB_RUNTIME_DIR}/lld/lib/${CMAKE_SHARED_LIBRARY_PREFIX}LLVM${CMAKE_SHARED_LIBRARY_SUFFIX}
+)
+
 ###############################################################################
 # Installation
 ###############################################################################
@@ -48,3 +75,7 @@ set_target_properties (odbc
 install (
     TARGETS odbc
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+install (
+    DIRECTORY ${ODB_RUNTIME_DIR}/lld
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
