Add VariableScope and astpost::ResolveAndCheckTypes.

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -206,11 +206,13 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/ast/UnaryOp.cpp"
     "src/ast/VarDecl.cpp"
     "src/ast/Variable.cpp"
+    "src/ast/VariableScope.cpp"
     "src/ast/VarRef.cpp"
     "src/ast/Visitor.cpp"
     "src/astpost/EliminateBitwiseNotRHS.cpp"
     "src/astpost/EnforceSingleDefaultCase.cpp"
     "src/astpost/Process.cpp"
+    "src/astpost/ResolveAndCheckTypes.cpp"
     "src/astpost/ResolveLabels.cpp"
     "src/astpost/ValidateUDTFieldNames.cpp"
     "src/commands/CommandLoader.cpp"
