Move odb::ir to odb::codegen

--- a/odb-compiler/CMakeLists.txt
+++ b/odb-compiler/CMakeLists.txt
@@ -215,16 +215,16 @@ add_library (odb-compiler ${ODBCOMPILER_LIB_TYPE}
     "src/astpost/ResolveAndCheckTypes.cpp"
     "src/astpost/ResolveLabels.cpp"
     "src/astpost/ValidateUDTFieldNames.cpp"
+    "src/codegen/internal/CodeGenerator.cpp"
+    "src/codegen/internal/ODBEngineInterface.cpp"
+    "src/codegen/internal/DBPEngineInterface.cpp"
+    "src/codegen/Codegen.cpp"
     "src/commands/CommandLoader.cpp"
     "src/commands/ODBCommandLoader.cpp"
     "src/commands/DBPCommandLoader.cpp"
     "src/commands/Command.cpp"
     "src/commands/CommandIndex.cpp"
     "src/commands/CommandMatcher.cpp"
-    "src/ir/codegen/CodeGenerator.cpp"
-    "src/ir/codegen/ODBEngineInterface.cpp"
-    "src/ir/codegen/DBPEngineInterface.cpp"
-    "src/ir/Codegen.cpp"
     "src/parsers/db/Driver.cpp"
     "src/parsers/PluginInfo.cpp")
 target_include_directories (odb-compiler
