--- a/odb-sdk/plugins/templates/config.hpp.in
+++ b/odb-sdk/plugins/templates/config.hpp.in
@@ -11,7 +11,8 @@
 #define ODBPLUGIN_VERSION_STR \
     STRINGIFY(ODBPLUGIN_VERSION_MAJOR) "." STRINGIFY(ODBPLUGIN_VERSION_MINOR) "." STRINGIFY(ODBPLUGIN_VERSION_PATCH)
 
-#define ODBPLUGIN_PLATFORM_${ODB_PLATFORM}
+#undef STRINGIFY_    
+#undef STRINGIFY
 
 #if defined(ODBPLUGIN_BUILDING)
 #   define ODBPLUGIN_API ${ODBPLUGIN_API_EXPORT}
