--- a/odb-sdk/templates/config.hpp.in
+++ b/odb-sdk/templates/config.hpp.in
@@ -11,7 +11,9 @@
 #define ODBSDK_VERSION_STR \
     STRINGIFY(ODBSDK_VERSION_MAJOR) "." STRINGIFY(ODBSDK_VERSION_MINOR) "." STRINGIFY(ODBSDK_VERSION_PATCH)
 
-#define ODBSDK_PLATFORM_${ODB_PLATFORM}
+#undef STRINGIFY
+#undef STRINGIFY_
+
 #define ODBSDK_${ODBSDK_LIB_TYPE}
 
 #if defined(ODBSDK_SHARED)
